<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="70dp"
    android:layout_height="130dp"
    android:background="#898B95"
    android:orientation="vertical"
    android:layout_marginStart="24dp">

    <TextView
        android:id="@+id/selector_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lib_all_files"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ECECEC" />

    <TextView
        android:id="@+id/selector_pdf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lib_pdf"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ECECEC" />

    <TextView
        android:id="@+id/selector_word"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lib_word"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ECECEC" />

    <TextView
        android:id="@+id/selector_zip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lib_zip"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>