<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_form_pdf"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/item_pdf_form_word"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_item_border_selector"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mip_home_from_word" />

            <TextView
                style="@style/home_item_text"
                android:text="@string/pdf_to_word" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_pdf_form_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/home_item_border_selector"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mip_home_from_img" />

            <TextView
                style="@style/home_item_text"
                android:text="@string/pdf_to_img" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>