<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.MineFAQActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:src="@mipmap/mip_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mine_faq"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/faq_layout_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="24dp"
                    android:src="@mipmap/mip_mine_faq1" />

                <TextView
                    style="@style/mine_faq_text"
                    android:text="@string/faq_title_1" />

                <ImageView
                    android:id="@+id/mine_faq_img_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@mipmap/mip_mine_faq_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/faq_content_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="5dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/faq_content_1"
                android:textColor="#898B95"
                android:textSize="14sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/faq_layout_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="23dp"
                    android:src="@mipmap/mip_mine_faq2" />

                <TextView
                    style="@style/mine_faq_text"
                    android:text="@string/faq_title_2" />

                <ImageView
                    android:id="@+id/mine_faq_img_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@mipmap/mip_mine_faq_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/faq_content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="5dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/faq_content_2"
                android:textColor="#898B95"
                android:textSize="14sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/faq_layout_3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="24dp"
                    android:src="@mipmap/mip_mine_faq3" />

                <TextView
                    style="@style/mine_faq_text"
                    android:text="@string/faq_title_3" />

                <ImageView
                    android:id="@+id/mine_faq_img_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@mipmap/mip_mine_faq_down" />

            </LinearLayout>

            <TextView
                android:id="@+id/faq_content_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:lineSpacingExtra="5dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/faq_content_3"
                android:textColor="#898B95"
                android:textSize="14sp"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>