<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_fillet_style"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:text="@string/rename_file"
        android:textColor="#44454B"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/rename_edit"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_style"
        android:paddingStart="8dp"
        android:layout_gravity="center"
        android:textColor="#44454B"
        android:textSize="15sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#898B95"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#EEEEEE" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#3F51B5"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>