<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/dialog_fillet_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/delete_content"
            android:textColor="#898B95"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="#898B95"
                android:gravity="center"
                android:textSize="16sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#EEEEEE" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textColor="#3F51B5"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/dialog_delete"
        android:visibility="visible"/>

</FrameLayout>