<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.ImageToPDFActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:src="@mipmap/mip_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/img_to_pdf"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/img_to_pdf_prompt"
            android:textColor="#898B95"
            android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/convert"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/convert_to_pdf_selector"
                android:gravity="center"
                android:text="@string/home_to_pdf"
                android:textColor="@android:color/white"
                android:textSize="16dp"/>

    </LinearLayout>

</LinearLayout>