<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.PreviewPDFActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:src="@mipmap/mip_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="58dp"
            android:text="@string/preview_pdf"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/preview_conversion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/converting"
                android:textColor="#898B95"
                android:textSize="13sp"
                android:background="@drawable/white_selector"
                app:drawableTopCompat="@mipmap/preview_conversion" />

            <TextView
                android:id="@+id/preview_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/share"
                android:textColor="#898B95"
                android:textSize="13sp"
                android:background="@drawable/white_selector"
                app:drawableTopCompat="@mipmap/preview_share" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>